Adding 2 new images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
     volumes:
       - ./logs:/app/logs
       - ./auth_info_baileys:/app/auth_info_baileys
+      - ./images:/app/images  
     networks:
       - bot-network
     logging:
